--- a/Frontend/ocr/en.html
+++ b/Frontend/ocr/en.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="assets/css/maind2b0.css?id=39d4bc0142a2267fd731" />
     <link rel="stylesheet" href="assets/css/indexf7a7.css?id=4721764f1cb290fb10e3" />
 
-    <link rel="alternate" hreflang="x-default" href="index.html" />
+    <link rel="alternate" hreflang="x-default" href="../index.html" />
     <link rel="alternate" hreflang="en" href="en.html" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -54,7 +54,7 @@
 
                 <ul class="header-menu">
                     <li class="gtm_nav_main active"><a href="en.html">Main</a></li>
-                    <li ><a href="../login_signup/page.html">Logout</a></li>
+                    <li ><a href="../index.html">Logout</a></li>
 
                 </ul>
                 <div class="header-options">
