--- a/Frontend/ocr/en.html
+++ b/Frontend/ocr/en.html
@@ -63,7 +63,7 @@
     } );
 
     // Set up our request
-    XHR.open( "POST", "http://127.0.0.1:5000/upload/"+conf+"/"+lang);
+    XHR.open( "POST", "http://a3b12ee095f4.ngrok.io/upload/"+conf+"/"+lang);
 
     // The data sent is what the user provided in the form
     XHR.send( FD );
