--- a/Frontend/ocr/en.html
+++ b/Frontend/ocr/en.html
@@ -153,7 +153,7 @@
                             <li><a href="#tab-file" class="active-tab">Upload file</a></li>
                             <li><a href="#tab-link" class="active-tab">By link</a></li>
                         </ul> -->
-                        <div class="upload-tabs-container">
+                        <div class="upload-tabs-container ocrForm">
                       
                                 <form class="simple-form upload-form" id ="theForm">
                                   
@@ -188,7 +188,7 @@
                                     </div>
                                 </form> 
                             </div>
-                            <div class="objectForm" class="upload-tabs-content">
+                            <div class="objectForm upload-tabs-content">
                                 <form method="POST" action="http://7107328a5475.ngrok.io/upload/detect/nep" class="simple-form upload-form" enctype="multipart/form-data">
                                     <input type="hidden" name="_token" value="jTQA9hnvhtQfjUqShhIhj99Bgi9TaHFUW636pQUK">
                                     <div class="dropzone2">
