--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					</div>
 					<input type="submit" value="SIGNUP">
 				</form>
-				<p>Don't have an Account? <a href="Frontend/ocr/en.html"> Login Now!</a></p>
+				<p>Click Login Now!, no need to signUp<a href="Frontend/ocr/en.html"> Login Now!</a></p>
 			</div>
 		</div>
 		<div class="colorlibcopy-agile">
