--- a/Frontend/ocr/en.html
+++ b/Frontend/ocr/en.html
@@ -93,7 +93,7 @@
 
                 <ul class="header-menu">
                     <li class="gtm_nav_main active"><a href="en.html">Main</a></li>
-                    <li ><a href="../index.html">Logout</a></li>
+                    <li ><a href="https://ashish807.github.io/OCR-and-language-translation/">Logout</a></li>
 
                 </ul>
                 <div class="header-options">
