--- a/Web_Frontend/Team/Team_Cards.html
+++ b/Web_Frontend/Team/Team_Cards.html
@@ -46,7 +46,7 @@
      	</div>
      	<div class="content">
      		<h2>Anil Meena<br>
-     		<span>Frontend Web Intial phase</span><br>
+     		<span>Frontend Web</span><br>
      		</h2>
      	</div>
     </div>	
