--- a/MinorProjectHost/Profile_page/profile.html
+++ b/MinorProjectHost/Profile_page/profile.html
@@ -13,7 +13,8 @@
         <div id="imgkeliye">
     	       <img class="round" id="myimg" alt="user">
         </div>
-        <h1 style="color:#d7fffe">
+          <h1 id="upfile1">
+            
             <i class="fab fa-instagram"></i>
         </h1>
         
