--- a/MinorProjectHost/Profile_page/profile.html
+++ b/MinorProjectHost/Profile_page/profile.html
@@ -32,11 +32,11 @@
             <input type="text" class="form-control" id="userFullName" onblur="checkUserFullName()" placeholder="Fullname"><br>
             </div>
             <div class="form-group">
-            <label for="userplc">Enter Place<span class="text-danger ml-1">*</span></label>
+            <label for="userplc">Phone<span class="text-danger ml-1">*</span></label>
             <input type="text" class="form-control" id="userplc" placeholder="Fullname">
             </div><br>
             <div class="form-group">
-            <label for="userclg">Enter College Name<span class="text-danger ml-1">*</span></label>
+            <label for="userclg">Gender<span class="text-danger ml-1">*</span></label>
             <input type="text" class="form-control" id="userclg" placeholder="Fullname">
             </div><br>
        <button type="button" class="btn btn-outline-primary btn-block text-uppercase mb-3" onclick="saveProfile()">Update</button>
